sources/libClangSharp/ClangSharp.h

enum CX_IfStatementKind {
    CX_ISK_Invalid,
    CX_ISK_Ordinary = static_cast<int>(clang::IfStatementKind::Ordinary) + 1,
    CX_ISK_Constexpr = static_cast<int>(clang::IfStatementKind::Constexpr) + 1,
    CX_ISK_ConstevalNonNegated = static_cast<int>(clang::IfStatementKind::ConstevalNonNegated) + 1,
    CX_ISK_ConstevalNegated = static_cast<int>(clang::IfStatementKind::ConstevalNegated) + 1,
};
enum CX_PredefinedIdentKind {
    CX_PIK_Invalid,
    CX_PIK_Func = static_cast<int>(clang::PredefinedIdentKind::Func) + 1,
    CX_PIK_Function = static_cast<int>(clang::PredefinedIdentKind::Function) + 1,
    CX_PIK_LFunction = static_cast<int>(clang::PredefinedIdentKind::LFunction) + 1,
    CX_PIK_FuncDName = static_cast<int>(clang::PredefinedIdentKind::FuncDName) + 1,
    CX_PIK_FuncSig = static_cast<int>(clang::PredefinedIdentKind::FuncSig) + 1,
    CX_PIK_LFuncSig = static_cast<int>(clang::PredefinedIdentKind::LFuncSig) + 1,
    CX_PIK_PrettyFunction = static_cast<int>(clang::PredefinedIdentKind::PrettyFunction) + 1,
    CX_PIK_PrettyFunctionNoVirtual = static_cast<int>(clang::PredefinedIdentKind::PrettyFunctionNoVirtual) + 1,
};
CLANGSHARP_LINKAGE int clangsharp_Cursor_getFunctionScopeDepth(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getFunctionScopeIndex(CXCursor C);
CLANGSHARP_LINKAGE clang::MSGuidDeclParts clangsharp_Cursor_getGuidValue(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHadMultipleCandidates(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasAPValueResult(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasBody(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasBraces(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasDependentPromiseType(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasDefaultArg(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUnparsedDefaultArg(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUninstantiatedDefaultArg(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasElseStorage(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasExplicitTemplateArgs(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasImplicitReturnZero(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasInheritedDefaultArg(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasInit(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasInitStorage(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasLeadingEmptyMacro(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasLocalStorage(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasPlaceholderTypeConstraint(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasTemplateKeyword(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredCopyAssignment(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredCopyConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredDestructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredMoveAssignment(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredMoveConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasUserDeclaredMoveOperation(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasDeletedDestructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasInClassInitializer(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasMutableFields(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasNonTrivialDefaultConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasNonTrivialDestructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasPrivateFields(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasProtectedFields(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasTrivialCopyConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasTrivialDefaultConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasTrivialDestructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getHasVarStorage(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getHoldingVar(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getInClassInitializer(CXCursor C);
CLANGSHARP_LINKAGE CX_PredefinedIdentKind clangsharp_Cursor_getIdentKind(CXCursor C);
CLANGSHARP_LINKAGE CX_IfStatementKind clangsharp_Cursor_getIfStatementKind(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getIgnoreParenNoopCasts(CXCursor C);